# CircuitGenome

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
circuitgenome/: __init__.py  cli.py
circuitgenome/designer/: __init__.py  designer.py  models.py
circuitgenome/recognizer/: __init__.py  functional_block_recognizer.py  hooks.py  models.py  netlist_parser.py  subcircuit_recognizer.py
circuitgenome/sizer/: __init__.py  constraints.py  device_model.py  equations.py  gmid_geometry.py  gmid_lut.py  headroom.py  loader.py  models.py  refine.py  sizer.py  spice_sim.py
circuitgenome/synthesizer/: CLAUDE.md  __init__.py  bias_compatibility.py  bias_construction.py  bias_pruning.py  cmfb_compatibility.py  compensation_compatibility.py  load_branch_compatibility.py  loader.py  models.py  net_aliasing.py  netlist.py  output_compatibility.py  polarity_compatibility.py  second_stage_compatibility.py  synthesizer.py  tail_current_compatibility.py
circuitgenome/visualizer/: app.py  graph.py
docs/: conf.py  contributing.rst  extending.rst  index.rst  installation.rst  overview.rst  references.rst  requirements.txt  topology_counts.rst  walkthroughs.rst
docs/_ext/: topology_counts.py
docs/_static/: custom.css
docs/adr/: 0001-output-stage-is-the-follower-buffer.md  0002-walkthroughs-as-raw-html.md
docs/api/: bias_compatibility.rst  bias_construction.rst  bias_pruning.rst  cmfb_compatibility.rst  compatibility.rst  compensation_compatibility.rst  load_branch_compatibility.rst  loader.rst  models.rst  net_aliasing.rst  netlist.rst  output_compatibility.rst  polarity_compatibility.rst  second_stage_compatibility.rst  synthesizer.rst  tail_current_compatibility.rst
docs/modules/: designer.rst  functional_block_recognizer.rst  sizer.rst  subcircuit_recognizer.rst  synthesizer.rst  visualizer.rst
docs/plans/: 2026_06_19_sr_milestone2_design.md  2026_06_20_initial_sizing_module.md  (+1 more)
examples/: spec_three_stage_opamp_fully_differential.yaml  spec_three_stage_opamp_single_ended.yaml  spec_two_stage_opamp.yaml
tests/: test_bias_levels.py  test_block_intent.py  test_cascode_rout.py  test_cli.py  test_dc_op.py  test_designer.py  test_fd_three_stage_gmid.py  test_gf180.py  test_gmid_blocks.py  test_gmid_geometry.py  test_gmid_lut.py  test_headroom.py  test_recognizer.py  test_refine.py  test_resistors.py  test_sized_netlist_parser.py  test_sizer.py  test_sky130.py  test_spice_sim.py  test_sr_netlist.py  test_synthesizer.py  test_visualizer.py
tools/: extract_tech.py  gen_topology_counts.py  spice_verify.py
(+218 files in other folders)
