[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitgenome"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
circuitgenome = "circuitgenome.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"circuitgenome.synthesizer" = ["config/*.yaml"]
